--- a/package.json
+++ b/package.json
@@ -3,22 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "monit": "pm2 monit",
+    "kill": "pm2 kill",
+    "regtest": "pm2 start ./ecosystem.config.js",
+    "testnet": "pm2 start ./ecosystem.config.js --env test",
+    "mainnet": "pm2 start ./ecosystem.config.js --env production"
   },
   "dependencies": {
     "bignumber.js": "^8.0.2",
+    "bn.js": "^5.1.1",
     "body-parser": "^1.18.3",
+    "bs58": "^4.0.1",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "elliptic": "^6.5.2",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jose": "^1.25.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0",
     "node-json-rpc": "0.0.1",
     "node-schedule": "^1.3.2",
+    "pm2": "^4.2.3",
     "request": "^2.88.0",
     "sqlite3": "^4.1.0"
   }
