--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "test": "node ./bin/www",
+    "start": "pm2 start ./ecosystem.config.js",
+    "stop": "pm2 kill",
     "monit": "pm2 monit",
-    "kill": "pm2 kill",
-    "regtest": "pm2 start ./ecosystem.config.js",
+    "regnet": "pm2 start ./ecosystem.config.js --env development",
     "testnet": "pm2 start ./ecosystem.config.js --env test",
     "mainnet": "pm2 start ./ecosystem.config.js --env production"
   },
