--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "pm2 install pm2-logrotate",
     "test": "node ./bin/www",
     "start": "pm2 start ./ecosystem.config.js",
     "stop": "pm2 kill",
